@@ -26,7 +26,7 @@ my $init = {};
 if ($use_db && $connect_info) {
     $init->{'qc_schema'} = npg_qc::Schema->connect(map { $connect_info->{$_} } sort keys %{$connect_info});
 }
-my @check_names = grep { not / interop|generic /xms }
+my @check_names = grep { not / interop /xms }
                   @{npg_qc::autoqc::results::collection->new()->checks_list()};
 $init->{'checks_list'} = \@check_names;
 
