@@ -8,7 +8,7 @@ use npg_tracking::glossary::composition::component::illumina;
 use_ok ('npg_qc::autoqc::results::generic');
 
 subtest 'attributes and methods' => sub {
-  plan tests => 16;
+  plan tests => 12;
 
   my $c = npg_tracking::glossary::composition->new(components => [
     npg_tracking::glossary::composition::component::illumina->new(
@@ -19,13 +19,11 @@ subtest 'attributes and methods' => sub {
               composition  => $c
   );
   isa_ok ($r, 'npg_qc::autoqc::results::generic');
-  is ($r->check_name(), 'generic_unknown', 'check name');
-  is ($r->class_name(), 'generic', 'class name');
   is ($r->pp_name(), undef, 'descriptor is undefined');
   is ($r->doc(), undef, 'doc is undefined');
   is ($r->filename_root, '3_1#4.unknown', 'file name root');
   is ($r->class_name, 'generic', 'class name');
-  is ($r->check_name, 'generic_unknown', 'check name');
+  is ($r->check_name, 'generic unknown', 'check name');
 
   $r = npg_qc::autoqc::results::generic->new(
               composition => $c,
@@ -33,14 +31,12 @@ subtest 'attributes and methods' => sub {
               doc         => {qc_pass => 'TRUE', num_aligned_reads => 3},
   );
   isa_ok ($r, 'npg_qc::autoqc::results::generic');
-  is ($r->check_name(), 'generic_pp1', 'check name');
-  is ($r->class_name(), 'generic', 'class name');
   is ($r->pp_name(), 'pp1', 'descriptor');
   is_deeply ($r->doc(), {qc_pass => 'TRUE', num_aligned_reads => 3},
     'metrics hash');
   is ($r->filename_root, '3_1#4.pp1', 'file name root');
   is ($r->class_name, 'generic', 'class name');
-  is ($r->check_name, 'generic_pp1', 'check name');
+  is ($r->check_name, 'generic pp1', 'check name');
 };
 
 1;
