@@ -7,6 +7,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
      to be able to produce distinct visual representation in SeqQC for
      different external pipelines check_name method to return the
      name of the class concatenated with the name of the pipeline
+ - SeqQC view for the autoqc generic result
 
 release 68.5.0
  - npg_simple_robo4artic:
